# dw3t

./: .gitmodules  .pre-commit-config.yaml  README.md  dw3t.ini  dw3t.toml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/dw3t/: __init__.py  __main__.py  _parsing.py  _typing.py  default.py  main.py  model.py  userdef.py
src/dw3t/tbr/: dw3t.obj.ini  main_as_cli.py  utils.py
src/dw3t/template/: builtin.py  identity.py  nonos.py  phi_expansion.py  userdef.py
src/dw3t/template/array/: identity.py
src/dw3t/template/model/: builtin.py  identity.py  phi_expansion.py  r_cavity.py  userdef.py
tests/: conftest.py  dw3t.toml  test_all_files.py
tests/data/: dw3t.ini  dw3t.toml
tests/data/idefix_1_dust_fluid/: data.0000.vtk  idefix.ini
tests/data/idefix_1_dust_fluid/radmc3d_ref/: amr_grid.inp  dust_density.binp  dustkapscatmat_0.inp  dustopac.inp  dw3t.full.toml  dw3t.ini  gas_velocity.binp  metadata.npz  numberdens_co.binp  radmc3d.inp  stars.inp  wavelength_micron.inp
