[project]
name = "dw3t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gwf" }
]
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.2.0",
    "deep-chainmap>=0.1.3",
    "dsharp-opac>=1.1.13",
    "inifix>=6.1.1",
    "nonos>=0.19.1",
    "numpy>=2.4.0",
    "tomli-w>=1.2.0",
    "tomli>=2.4.0; python_full_version<'3.15.0a6'",
]

[project.scripts]
dw3t = "dw3t.main:main"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
