[project]
name = "dw3t"
version = "0.1.0"
description = "Interface between spherical datasets from simulation outputs and radmc3d"
readme = "README.md"
authors = [
    { name = "gwf" }
]
requires-python = ">=3.11.4"
dependencies = [
    "astropy>=7.0.0",
    "deep-chainmap>=0.1.3",
    "dsharp-opac>=1.1.13",
    "inifix>=6.1.1",
    "nonos>=0.19.1, <0.22.0",
    "numpy>=2.1.0",
    "prodimopy>=2.5.2",
    "scipy>=1.16.3",
    "tomli-w>=1.2.0",
    "tomli>=2.4.0; python_full_version<'3.15.0a6'",
]

[project.scripts]
dw3t = "dw3t.main:main"

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
constraint-dependencies = [
    # via astropy
    "pyerfa>=2.0.1.3",
    # via dsharp-opac
    "setuptools>=70.0.0",
    "mpmath>=1.2.1",
    "matplotlib>=3.8.0",
    "pillow>=10.0.0",
]
no-build-package = [
    "astropy",
    "contourpy",
    "kiwisolver",
    "matplotlib",
    "numpy",
    "pandas",
    "pillow",
    "pyerfa",
    "pyyaml",
    "scipy",
]


[tool.ruff.lint]
extend-select = [
    "A", # flake8-builtins
    # "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    # "C4", # flake8-comprehensions
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "NPY", # flake8-numpy
    "PT", # flake8-pytest-style
    "SIM", # flake8-simplify
    "YTT", # flake8-2020
    # "FURB", # refurb
    # "RUF", # ruff
    "UP", # pyupgrade
]
